syntax = "proto3";
package com.xxkun.client.msg.bean;
import "google/protobuf/any.proto";

message BaseServerResponse {
  ResponseType response_type = 1;
  google.protobuf.Any body = 2;

  enum ResponseType {
    UPDATE_TOKEN = 0;
    PUNCH = 1;
    USER_EXCEPTION = 2;
    MSG_REPLY = 3;
  }
}


message UpdateTokenResponse {
  string token = 1;
}

message PunchResponse {
  repeated PeerInfo peer_info = 1;

  message PeerInfo {
    uint64 id = 1;
    string name = 2;
    string url = 3;
  }
}

message UserExceptionResponse {
  Type type = 1;
  repeated uint64 peer_id = 2;

  enum Type {
      USER_NOT_EXIST = 0;
      USER_OFFLINE = 1;
  }
}

message MsgReplyResponse {
  Type type = 1;

  enum Type {
      LOGIN_EXPIRE = 0;
  }
}